chore: Update contract address and value in deployment script

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Simple Real Estate Transaction</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
   </head>
   <body>
